# orboros

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Justfile  README.md  compatibility.md
crates/orboros/: Cargo.toml  test-fixtures
crates/orboros/examples/: routing.toml
crates/orboros/src/: config.rs  daemon.rs  lib.rs  main.rs  orb_cmd.rs  orchestrator.rs  plan.rs  prompt.rs  queue_loop.rs  runner.rs  second_opinion_trigger.rs  slop.rs  startup_check.rs  trace.rs  tracing_ctx.rs
crates/orboros/src/bench/: calibration.rs  case.rs  cmd.rs  mod.rs  runner.rs  runner_t2t3.rs  store.rs
crates/orboros/src/convo/: cli.rs  mod.rs  render.rs  sessions_cmd.rs
crates/orboros/src/coordinator/: aggregate.rs  decompose.rs
crates/orboros/src/hooks/: cmd.rs  config.rs  event.rs  matcher.rs  mod.rs  runner.rs  sink.rs
crates/orboros/src/ipc/: transport.rs
crates/orboros/src/phases/: decompose.rs  mod.rs  re_evaluation.rs  refinement.rs  review.rs  second_opinion.rs  speccing.rs
crates/orboros/src/routing/: profile.rs
crates/orboros/src/worker/: dispatcher.rs  mod.rs  pool.rs  process.rs
crates/orboros/tests/: bench_harness_e2e.rs  convo_runtime.rs  dispatcher_e2e.rs  hooks_e2e.rs  queue_dispatch_e2e.rs  second_opinion_e2e.rs  worker_lifecycle.rs
crates/orbs/: Cargo.toml
crates/orbs/src/: audit.rs  audit_store.rs  dep.rs  dep_store.rs  id.rs  lib.rs  orb.rs  orb_store.rs  pipeline.rs  review.rs  session.rs  session_store.rs  store.rs  task.rs  trace.rs  tree.rs
crates/orbs/tests/: session_store.rs
docs/: cli-reference.md  getting-started.md  (+1 more)
src/: lib.rs  (+12 more)
(+79 files in other folders)
